--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BB.loader.js";
+      var loaderUrl = buildUrl + "/mkRepo.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/BB.data",
-        frameworkUrl: buildUrl + "/BB.framework.js",
-        codeUrl: buildUrl + "/BB.wasm",
+        dataUrl: buildUrl + "/mkRepo.data",
+        frameworkUrl: buildUrl + "/mkRepo.framework.js",
+        codeUrl: buildUrl + "/mkRepo.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TrsuresAR",
